# ProjectGL

./: .gitignore  CMakeLists.txt  README.md
Sandbox/: CMakeLists.txt  sandbox.cpp  sandbox_layer.cpp  sandbox_layer.h
SolarB/: CMakeLists.txt
SolarB/src/: entry.cpp  main.cpp
SolarB/src/game/: game.cpp  game.h
SolarB/src/input/: input.h
SolarB/src/layer/: layer.cpp  layer.h
SolarB/src/renderer/: renderer.cpp  renderer.h
SolarB/src/window/: win_app.cpp  win_app.h
include/: config.h  render.h  win_app.h
resources/shader/: shader.fs
src/: main.cpp
src/game/: game.cpp  game.h
src/render/: render.cpp
src/renderer/: renderer.cpp  renderer.h
src/window/: win_app.cpp  win_app.h
